--- a/book.tex
+++ b/book.tex
@@ -4197,7 +4197,7 @@ and the output of \code{assign\_homes} is on the right.  In this
 example, we assign variable \code{a} to stack location
 \ifxeightsix{\code{-8(\%rbp)}}\ifriscv{\code{-24(fp)}} and variable
 \code{b} to location
-\ifxeightsix{\code{-16(\%rbp)}}\ifriscv{\code{-32(fp}}. 
+\ifxeightsix{\code{-16(\%rbp)}}\ifriscv{\code{-32(fp)}}. 
 \if\architecture\xeightysixEd
 \begin{transformation}
 \begin{lstlisting}[basicstyle=\ttfamily\footnotesize]
