spelling of RISC V

--- a/defs.tex
+++ b/defs.tex
@@ -84,7 +84,7 @@
 \newcommand{\ARCHNAME}{X86}
 \fi
 \if\architecture\riscvEd
-\newcommand{\ArchName}{riscv}
+\newcommand{\ArchName}{RISC V}
 \newcommand{\ARCHNAME}{RISCV}
 \fi
 
